test/rbkt/Queries/zorba/parser/syntax-errors/unexpected_character_2.xq
(: 
  Syntax error with an improved error message:
  unexpected character ":"
:)

path :